--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_MAX_HAMMER_FRAMES = 7
 VITE_MAX_MOLE_SPAWN_FRAMES = 6
+VITE_SUPABASE_KEY = **.NUTMetZP_2tvcYvUAqT1lWv0gFiWb0y8IOSVgGjrb-I
+VITE_DUMMY_EMAIL = dummy@test.com
+VITE_DUMMY_PASSWORD = dummyPassword
